@@ -77,25 +77,30 @@ public class OpSelectorHandler extends MessageToMessageDecoder<RequestMessage> {
     @Override
     protected void decode(final ChannelHandlerContext ctx, final RequestMessage msg,
                           final List<Object> objects) throws Exception {
-        final Context gremlinServerContext = new Context(msg, ctx, settings,
-                graphManager, gremlinExecutor, this.scheduledExecutorService);
-        try {
-            // choose a processor to do the work based on the request message.
-            final Optional<OpProcessor> processor = OpLoader.getProcessor(msg.getProcessor());
+        // test for noop processor which is a do nothing and response with SUCCESS
+        if (msg.getProcessor().equals("noop")) {
+            ctx.writeAndFlush(ResponseMessage.build(msg).code(ResponseStatusCode.SUCCESS).create());
+        } else {
+            final Context gremlinServerContext = new Context(msg, ctx, settings,
+                    graphManager, gremlinExecutor, this.scheduledExecutorService);
+            try {
+                // choose a processor to do the work based on the request message.
+                final Optional<OpProcessor> processor = OpLoader.getProcessor(msg.getProcessor());
 
-            if (processor.isPresent())
-                // the processor is known so use it to evaluate the message
-                objects.add(Pair.with(msg, processor.get().select(gremlinServerContext)));
-            else {
-                // invalid op processor selected so write back an error by way of OpProcessorException.
-                final String errorMessage = String.format("Invalid OpProcessor requested [%s]", msg.getProcessor());
-                throw new OpProcessorException(errorMessage, ResponseMessage.build(msg)
-                        .code(ResponseStatusCode.REQUEST_ERROR_INVALID_REQUEST_ARGUMENTS)
-                        .statusMessage(errorMessage).create());
+                if (processor.isPresent())
+                    // the processor is known so use it to evaluate the message
+                    objects.add(Pair.with(msg, processor.get().select(gremlinServerContext)));
+                else {
+                    // invalid op processor selected so write back an error by way of OpProcessorException.
+                    final String errorMessage = String.format("Invalid OpProcessor requested [%s]", msg.getProcessor());
+                    throw new OpProcessorException(errorMessage, ResponseMessage.build(msg)
+                            .code(ResponseStatusCode.REQUEST_ERROR_INVALID_REQUEST_ARGUMENTS)
+                            .statusMessage(errorMessage).create());
+                }
+            } catch (OpProcessorException ope) {
+                logger.warn(ope.getMessage(), ope);
+                ctx.writeAndFlush(ope.getResponseMessage());
             }
-        } catch (OpProcessorException ope) {
-            logger.warn(ope.getMessage(), ope);
-            ctx.writeAndFlush(ope.getResponseMessage());
         }
     }
 
